Allow for ordered processing of steps