@@ -13,13 +13,12 @@ import org.junitpioneer.jupiter.cartesian.CartesianTest;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
 class PathFinderTests {
     @CartesianTest
     @CartesianTest.MethodFactory("withAllPathFinders")
     void handleAbsentSteps(PathFinder pathFinder) {
-        List<Set<Integer>> steps = new ArrayList<>();
+        List<List<Integer>> steps = new ArrayList<>();
         int target = 0;
 
         List<Path> paths = pathFinder.find(steps, target);
@@ -29,7 +28,7 @@ class PathFinderTests {
 
     @CartesianTest
     @CartesianTest.MethodFactory("withAllPathFindersAndEmptySteps")
-    void handleEmptySteps(PathFinder pathFinder, List<Set<Integer>> steps) {
+    void handleEmptySteps(PathFinder pathFinder, List<List<Integer>> steps) {
         int target = 2;
 
         List<Path> paths = pathFinder.find(steps, target);
@@ -39,7 +38,7 @@ class PathFinderTests {
 
     @CartesianTest
     @CartesianTest.MethodFactory("withAllPathFindersAndUnreachableTargets")
-    void handleUnreachableTargets(PathFinder pathFinder, List<Set<Integer>> steps, int target) {
+    void handleUnreachableTargets(PathFinder pathFinder, List<List<Integer>> steps, int target) {
         List<Path> paths = pathFinder.find(steps, target);
 
         Assertions.assertEquals(0, paths.size());
@@ -47,7 +46,7 @@ class PathFinderTests {
 
     @CartesianTest
     @CartesianTest.MethodFactory("withAllPathFindersAndOneShortPath")
-    void findOneShortPath(PathFinder pathFinder, List<Set<Integer>> steps, int target) {
+    void findOneShortPath(PathFinder pathFinder, List<List<Integer>> steps, int target) {
         List<Path> paths = pathFinder.find(steps, target);
 
         int numPaths = paths.stream()
@@ -62,7 +61,7 @@ class PathFinderTests {
 
     @CartesianTest
     @CartesianTest.MethodFactory("withAllPathFindersAndTwoShortPaths")
-    void findTwoShortPaths(PathFinder pathFinder, List<Set<Integer>> steps, int target) {
+    void findTwoShortPaths(PathFinder pathFinder, List<List<Integer>> steps, int target) {
         List<Path> paths = pathFinder.find(steps, target);
 
         int numPaths = paths.stream()
@@ -93,11 +92,11 @@ class PathFinderTests {
                         getAllPathFinders()
                 )
                 .argumentsForNextParameter(
-                        List.of(Collections.emptySet()),
-                        List.of(Collections.emptySet(), Collections.emptySet()),
-                        List.of(Collections.emptySet(), Set.of(1, 2)),
-                        List.of(Set.of(1, 2), Collections.emptySet()),
-                        List.of(Set.of(3), Collections.emptySet(), Set.of(-1))
+                        List.of(Collections.emptyList()),
+                        List.of(Collections.emptyList(), Collections.emptyList()),
+                        List.of(Collections.emptyList(), List.of(1, 2)),
+                        List.of(List.of(1, 2), Collections.emptyList()),
+                        List.of(List.of(3), Collections.emptyList(), List.of(-1))
                 );
     }
 
@@ -107,12 +106,12 @@ class PathFinderTests {
                         getAllPathFinders()
                 )
                 .argumentsForNextParameter(
-                        List.of(Set.of(1)),
-                        List.of(Set.of(-3, 1)),
-                        List.of(Set.of(1), Set.of(2)),
-                        List.of(Set.of(0, 2), Set.of(3, -4)),
-                        List.of(Set.of(1), Set.of(1), Set.of(1)),
-                        List.of(Set.of(0), Set.of(1, 2), Set.of(2, 3))
+                        List.of(List.of(1)),
+                        List.of(List.of(-3, 1)),
+                        List.of(List.of(1), List.of(2)),
+                        List.of(List.of(0, 2), List.of(3, -4)),
+                        List.of(List.of(1), List.of(1), List.of(1)),
+                        List.of(List.of(0), List.of(1, 2), List.of(2, 3))
                 )
                 .argumentsForNextParameter(
                         -1, 0, 2
@@ -125,13 +124,13 @@ class PathFinderTests {
                         getAllPathFinders()
                 )
                 .argumentsForNextParameter(
-                        List.of(Set.of(3)),
-                        List.of(Set.of(1, 3)),
-                        List.of(Set.of(1), Set.of(2)),
-                        List.of(Set.of(2, 1), Set.of(2, 3)),
-                        List.of(Set.of(1), Set.of(1), Set.of(1)),
-                        List.of(Set.of(1, 2), Set.of(3, 1), Set.of(4, 1, 2)),
-                        List.of(Set.of(0, 1, 2), Set.of(1), Set.of(1))
+                        List.of(List.of(3)),
+                        List.of(List.of(1, 3)),
+                        List.of(List.of(1), List.of(2)),
+                        List.of(List.of(2, 1), List.of(2, 3)),
+                        List.of(List.of(1), List.of(1), List.of(1)),
+                        List.of(List.of(1, 2), List.of(3, 1), List.of(4, 1, 2)),
+                        List.of(List.of(0, 1, 2), List.of(1), List.of(1))
                 )
                 .argumentsForNextParameter(
                         3
@@ -144,12 +143,12 @@ class PathFinderTests {
                         getAllPathFinders()
                 )
                 .argumentsForNextParameter(
-                        List.of(Set.of(1, 3), Set.of(1, 3)),
-                        List.of(Set.of(2, 3), Set.of(2, 1)),
-                        List.of(Set.of(1, 4), Set.of(0, 3)),
-                        List.of(Set.of(0), Set.of(1, 2), Set.of(2, 3)),
-                        List.of(Set.of(1, 2), Set.of(3, 1), Set.of(4, 0, 2)),
-                        List.of(Set.of(1, 2), Set.of(1), Set.of(2, 1))
+                        List.of(List.of(1, 3), List.of(1, 3)),
+                        List.of(List.of(2, 3), List.of(2, 1)),
+                        List.of(List.of(1, 4), List.of(0, 3)),
+                        List.of(List.of(0), List.of(1, 2), List.of(2, 3)),
+                        List.of(List.of(1, 2), List.of(3, 1), List.of(4, 0, 2)),
+                        List.of(List.of(1, 2), List.of(1), List.of(2, 1))
                 )
                 .argumentsForNextParameter(
                         4
